tests/errors/semantic/blocking/ex2.py
# pylint: disable=missing-function-docstring, missing-module-docstring

e2 = y[2] + 3
y[0] = 1
